Approve/reject store, confirm email for both customers and stores
