# backend/swagger-spec.json
@@ -1,6 +1,92 @@
 {
   "openapi": "3.0.0",
   "paths": {
+    "/api/users/admin/stores/approve": {
+      "post": {
+        "operationId": "AdminController_aproveStore",
+        "summary": "Approve a store",
+        "description": "Approve a store.",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AproveRejectStroreDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "The store has been successfully approved."
+          },
+          "401": {
+            "description": "The user is not logged in."
+          },
+          "403": {
+            "description": "The user hasn't the right role (admin)."
+          },
+          "404": {
+            "description": "The user is not found."
+          },
+          "422": {
+            "description": "The store is already approved."
+          }
+        },
+        "tags": [
+          "Users/Admin"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
+    "/api/users/admin/stores/reject": {
+      "post": {
+        "operationId": "AdminController_rejectStore",
+        "summary": "Reject a store",
+        "description": "Reject a store.",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AproveRejectStroreDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "The store has been successfully rejected."
+          },
+          "401": {
+            "description": "The user is not logged in."
+          },
+          "403": {
+            "description": "The user hasn't the right role (admin)."
+          },
+          "404": {
+            "description": "The user is not found."
+          },
+          "422": {
+            "description": "The store is already rejected."
+          }
+        },
+        "tags": [
+          "Users/Admin"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
     "/api/users/admin": {
       "post": {
         "operationId": "AdminController_create",
@@ -70,7 +156,7 @@
             "name": "role",
             "required": false,
             "in": "query",
-            "description": "Role (1: Admin, 2: Store, 3: Customer, 4: Unapproved Store, 5: Unapproved Customer, 6: Guest)",
+            "description": "Role (1: Admin, 2: Store, 3: Customer, 4: Unapproved Store, 5: Unconfirmed, 6: Guest)",
             "schema": {
               "enum": [
                 1,
@@ -114,6 +200,12 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "email-confirmed",
+            "required": false,
+            "in": "query",
+            "schema": {}
           }
         ],
         "responses": {
@@ -192,7 +284,7 @@
             "name": "role",
             "required": false,
             "in": "query",
-            "description": "Role (1: Admin, 2: Store, 3: Customer, 4: Unapproved Store, 5: Unapproved Customer, 6: Guest)",
+            "description": "Role (1: Admin, 2: Store, 3: Customer, 4: Unapproved Store, 5: Unconfirmed, 6: Guest)",
             "schema": {
               "enum": [
                 1,
@@ -236,6 +328,12 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "email-confirmed",
+            "required": false,
+            "in": "query",
+            "schema": {}
           }
         ],
         "responses": {
@@ -575,7 +673,7 @@
             "name": "role",
             "required": false,
             "in": "query",
-            "description": "Role (1: Admin, 2: Store, 3: Customer, 4: Unapproved Store, 5: Unapproved Customer, 6: Guest)",
+            "description": "Role (1: Admin, 2: Store, 3: Customer, 4: Unapproved Store, 5: Unconfirmed, 6: Guest)",
             "schema": {
               "enum": [
                 1,
@@ -592,9 +690,7 @@
             "name": "email-confirmed",
             "required": false,
             "in": "query",
-            "schema": {
-              "type": "boolean"
-            }
+            "schema": {}
           }
         ],
         "responses": {
@@ -711,7 +807,7 @@
             "name": "role",
             "required": false,
             "in": "query",
-            "description": "Role (1: Admin, 2: Store, 3: Customer, 4: Unapproved Store, 5: Unapproved Customer, 6: Guest)",
+            "description": "Role (1: Admin, 2: Store, 3: Customer, 4: Unapproved Store, 5: Unconfirmed, 6: Guest)",
             "schema": {
               "enum": [
                 1,
@@ -728,9 +824,7 @@
             "name": "email-confirmed",
             "required": false,
             "in": "query",
-            "schema": {
-              "type": "boolean"
-            }
+            "schema": {}
           }
         ],
         "responses": {
@@ -1064,7 +1158,7 @@
             "name": "role",
             "required": false,
             "in": "query",
-            "description": "Role (1: Admin, 2: Store, 3: Customer, 4: Unapproved Store, 5: Unapproved Customer, 6: Guest)",
+            "description": "Role (1: Admin, 2: Store, 3: Customer, 4: Unapproved Store, 5: Unconfirmed, 6: Guest)",
             "schema": {
               "enum": [
                 1,
@@ -1081,9 +1175,13 @@
             "name": "approved",
             "required": false,
             "in": "query",
-            "schema": {
-              "type": "boolean"
-            }
+            "schema": {}
+          },
+          {
+            "name": "email-confirmed",
+            "required": false,
+            "in": "query",
+            "schema": {}
           }
         ],
         "responses": {
@@ -1195,7 +1293,7 @@
             "name": "role",
             "required": false,
             "in": "query",
-            "description": "Role (1: Admin, 2: Store, 3: Customer, 4: Unapproved Store, 5: Unapproved Customer, 6: Guest)",
+            "description": "Role (1: Admin, 2: Store, 3: Customer, 4: Unapproved Store, 5: Unconfirmed, 6: Guest)",
             "schema": {
               "enum": [
                 1,
@@ -1212,9 +1310,13 @@
             "name": "approved",
             "required": false,
             "in": "query",
-            "schema": {
-              "type": "boolean"
-            }
+            "schema": {}
+          },
+          {
+            "name": "email-confirmed",
+            "required": false,
+            "in": "query",
+            "schema": {}
           }
         ],
         "responses": {
@@ -1713,9 +1815,44 @@
         ]
       }
     },
+    "/api/auth/email/stores/register/confirm": {
+      "post": {
+        "operationId": "JwtController_confirmStoreEmail",
+        "summary": "Email confirmation",
+        "description": "Confirm the email of a store to complete the registration process.",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AuthConfirmEmailDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "The email has been successfully confirmed."
+          },
+          "404": {
+            "description": "The store was not found."
+          },
+          "422": {
+            "description": "The hash is empty."
+          },
+          "500": {
+            "description": "Error confirming email."
+          }
+        },
+        "tags": [
+          "Authentication/Email"
+        ]
+      }
+    },
     "/api/auth/email/customers/register/confirm": {
       "post": {
-        "operationId": "JwtController_confirmEmail",
+        "operationId": "JwtController_confirmCustomerEmail",
         "summary": "Email confirmation",
         "description": "Confirm the email of a customer to complete the registration process.",
         "parameters": [],
@@ -2095,6 +2232,19 @@
       }
     },
     "schemas": {
+      "AproveRejectStroreDto": {
+        "type": "object",
+        "properties": {
+          "hash": {
+            "type": "string",
+            "example": "1a2b3c4d5e6f",
+            "description": "The hash used to aprove or reject the store by the admin"
+          }
+        },
+        "required": [
+          "hash"
+        ]
+      },
       "CreateAdminDto": {
         "type": "object",
         "properties": {
@@ -2129,6 +2279,12 @@
             "example": "+34661122334",
             "description": "The phone number of the user",
             "maxLength": 15
+          },
+          "email_confirmed": {
+            "type": "boolean",
+            "example": false,
+            "default": false,
+            "description": "Whether the email of the user has been confirmed or not by the himself."
           },
           "hash": {
             "type": "string",
@@ -2205,6 +2361,11 @@
             "example": "+34661122334",
             "description": "The phone number"
           },
+          "email_confirmed": {
+            "type": "boolean",
+            "example": false,
+            "description": "The email confirmation status of the user"
+          },
           "hash": {
             "type": "string",
             "example": null,
@@ -2237,6 +2398,7 @@
           "NIF",
           "address",
           "phone_number",
+          "email_confirmed",
           "hash",
           "created_at",
           "updated_at",
@@ -2277,6 +2439,12 @@
             "example": "+34661122334",
             "description": "The phone number of the user",
             "maxLength": 15
+          },
+          "email_confirmed": {
+            "type": "boolean",
+            "example": false,
+            "default": false,
+            "description": "Whether the email of the user has been confirmed or not by the himself."
           },
           "hash": {
             "type": "string",
@@ -2323,11 +2491,6 @@
             "example": 1,
             "description": "The id of the user"
           },
-          "email_confirmed": {
-            "type": "boolean",
-            "example": false,
-            "description": "The email confirmation status of the customer"
-          },
           "provider": {
             "type": "string",
             "example": "email",
@@ -2358,7 +2521,6 @@
         "required": [
           "id",
           "user_id",
-          "email_confirmed",
           "provider",
           "social_id",
           "first_name",
@@ -2400,6 +2562,12 @@
             "description": "The phone number of the user",
             "maxLength": 15
           },
+          "email_confirmed": {
+            "type": "boolean",
+            "example": false,
+            "default": false,
+            "description": "Whether the email of the user has been confirmed or not by the himself."
+          },
           "hash": {
             "type": "string",
             "example": null,
@@ -2417,12 +2585,6 @@
             "example": "12345678A",
             "description": "The NIF of the customer. Should be alphanumeric and unique among customers.",
             "maxLength": 15
-          },
-          "email_confirmed": {
-            "type": "boolean",
-            "example": false,
-            "default": false,
-            "description": "Whether the email of the customer has been confirmed or not by the user."
           },
           "provider": {
             "type": "string",
@@ -2491,6 +2653,12 @@
             "description": "The phone number of the user",
             "maxLength": 15
           },
+          "email_confirmed": {
+            "type": "boolean",
+            "example": false,
+            "default": false,
+            "description": "Whether the email of the user has been confirmed or not by the himself."
+          },
           "hash": {
             "type": "string",
             "example": null,
@@ -2508,12 +2676,6 @@
             "example": "12345678A",
             "description": "The NIF of the customer. Should be alphanumeric and unique among customers.",
             "maxLength": 15
-          },
-          "email_confirmed": {
-            "type": "boolean",
-            "example": false,
-            "default": false,
-            "description": "Whether the email of the customer has been confirmed or not by the user."
           },
           "provider": {
             "type": "string",
@@ -2623,6 +2785,12 @@
             "description": "The phone number of the user",
             "maxLength": 15
           },
+          "email_confirmed": {
+            "type": "boolean",
+            "example": false,
+            "default": false,
+            "description": "Whether the email of the user has been confirmed or not by the himself."
+          },
           "hash": {
             "type": "string",
             "example": null,
@@ -2694,6 +2862,12 @@
             "example": "+34661122334",
             "description": "The phone number of the user",
             "maxLength": 15
+          },
+          "email_confirmed": {
+            "type": "boolean",
+            "example": false,
+            "default": false,
+            "description": "Whether the email of the user has been confirmed or not by the himself."
           },
           "hash": {
             "type": "string",
